<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddEmployee">

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/telephone"
        android:inputType="phone" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/gender"
        android:text="TextView" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/btnMale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnMale" />

        <RadioButton
            android:id="@+id/btnFemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnFemale" />
    </RadioGroup>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="117dp" />

    <Button
        android:id="@+id/btnAddAddEmp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnAddEmployee" />

</LinearLayout>